clang/test/BSC/Negative/Ownership/RuleCheck/assign_owned_via_borrow/assign_owned_via_borrow.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int *_Owned p;
};

struct Bar {
  struct Foo *_Borrow foo;
};

struct Baz {
  struct Foo* foo;
};

struct Foo late_init(int *_Owned q) {
  struct Foo foo;
  foo.p = q; // ok
  return foo;
}

void fundamental(int *_Owned *_Borrow const p, int *_Owned q) {
  *p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

void fundamental_nested(int *_Owned *_Borrow const *const p, int *_Owned q) {
  **p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

void custom(struct Foo *_Borrow const foo, int *_Owned q) {
  foo->p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
  (*foo).p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

void nested_custom(struct Foo *_Borrow const *const foo, int *_Owned q) {
  (*foo)->p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
  (**foo).p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

void custom_value(struct Bar bar, int *_Owned q) {
  bar.foo->p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
  (*(bar.foo)).p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

void custom_nested(struct Bar *const bar, int *_Owned q) {
  bar->foo->p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
  (*((*bar).foo)).p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

void nested_custom_nested(struct Bar *const *const bar, int *_Owned q) {
  (*bar)->foo->p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

void tail_custom(struct Baz *_Borrow baz, int *_Owned q) {
  baz->foo->p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}} 
  (*((*baz).foo)).p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}} 
} 

void mid_custom(struct Baz *_Borrow *const baz, int *_Owned q) {
  (*baz)->foo->p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
  (*((**baz).foo)).p = q; // expected-error {{assign to _Owned value by dereferencing _Borrow}}
}

